--- a/index.html
+++ b/index.html
@@ -3,15 +3,18 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Congreso 2025</title>
+  <title>Congreso de Enfermería 2025</title>
   <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
   <header>
-    <h1>Congreso 2025</h1>
+    <h1>Congreso de Enfermería 2025</h1>
     <nav>
       <ul>
         <li><a href="#inicio">Inicio</a></li>
+        <li><a href="#mision">Misión</a></li>
+        <li><a href="#vision">Visión</a></li>
+        <li><a href="#objetivos">Objetivos</a></li>
         <li><a href="#cronograma">Cronograma</a></li>
         <li><a href="#conferencias">Conferencias</a></li>
         <li><a href="#info">Información</a></li>
@@ -22,8 +25,34 @@
 
   <main>
     <section id="inicio">
-      <h2>Bienvenidos al Congreso 2025</h2>
-      <p>Este evento reunirá a expertos y participantes de todo el país para compartir conocimiento y experiencias.</p>
+      <h2>Bienvenidos al Congreso de Enfermería 2025</h2>
+      <p>Un evento para compartir conocimientos, experiencias y formar conexiones significativas entre profesionales y estudiantes del área de la salud.</p>
+    </section>
+
+    <section id="mision">
+      <h2>Misión</h2>
+      <p>Organizar un congreso de enfermería que promueva principalmente el intercambio de conocimientos, experiencias y habilidades entre profesionales y estudiantes de enfermería, con la finalidad de elevar la calidad del cuidado en el sector salud mediante la capacitación continua y la actualización profesional. Es importante impactar positivamente en la profesión al ofrecer contenido de alta calidad impartido por expertos, creando un espacio colaborativo que potencie el aprendizaje teórico y práctico, a través de conferencias, talleres y actividades interactivas donde las relaciones interpersonales y el trabajo en equipo son pilares para mejorar y transformar la calidad de atención en salud, así mismo, empoderar a los futuros enfermeros y enfermeras, permitiéndoles desarrollar sus habilidades técnicas, éticas y de liderazgo para que puedan contribuir al bienestar global.</p>
+    </section>
+
+    <section id="vision">
+      <h2>Visión</h2>
+      <p>Ser un congreso de referencia para próximas generaciones de estudiantes de Licenciatura en Enfermería. Buscamos capacitar y formar a nuestros compañeros, promoviendo la innovación y la excelencia en el cuidado de la salud, proporcionando un entorno donde se puedan adquirir las competencias necesarias para enfrentar los retos presentes y futuros. Queremos inspirar a la próxima generación de profesionales de la salud a tomar el liderazgo en la transformación de la salud mundial, aplicando el poder de su vocación para cambiar vidas y comunidades, con un enfoque dirigido a mejorar el sistema de salud.</p>
+    </section>
+
+    <section id="objetivos">
+      <h2>Objetivos del Congreso</h2>
+      <h3>Objetivo General</h3>
+      <p>Proporcionar un espacio educativo, integral y seguro para que nuestros compañeros de licenciatura en enfermería puedan aprender de manera holística las responsabilidades, retos, habilidades y métodos que todo profesional de la salud debe poseer y practicar en su vida diaria. Para que sea agente de cambio y de este modo lograr una verdadera transformación en nuestros sistemas de salud.</p>
+      <h3>Objetivos Específicos</h3>
+      <ul>
+        <li>Brindar formación teórica y práctica sobre las últimas tendencias, investigaciones y avances en el campo de la enfermería.</li>
+        <li>Desarrollar habilidades de liderazgo y toma de decisiones éticas.</li>
+        <li>Fomentar la innovación y la investigación en enfermería.</li>
+        <li>Promover el trabajo en equipo y la colaboración interdisciplinaria.</li>
+        <li>Impulsar el compromiso social y profesional de los estudiantes.</li>
+        <li>Proporcionar un espacio donde profesionales y estudiantes puedan actualizarse.</li>
+        <li>Facilitar el intercambio de experiencias para el aprendizaje colaborativo.</li>
+      </ul>
     </section>
 
     <section id="cronograma">
@@ -53,7 +82,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 Congreso Nacional. Todos los derechos reservados.</p>
+    <p>&copy; 2025 Congreso Nacional de Enfermería. Todos los derechos reservados.</p>
   </footer>
 </body>
 </html>
