--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <li><a href="#mision">Misión</a></li>
         <li><a href="#vision">Visión</a></li>
         <li><a href="#objetivos">Objetivos</a></li>
+        <li><a href="#mapa">Mapa</a></li>
         <li><a href="#cronograma">Cronograma</a></li>
         <li><a href="#conferencias">Conferencias</a></li>
         <li><a href="#info">Información</a></li>
@@ -27,16 +28,19 @@
     <section id="inicio">
       <h2>Bienvenidos al Congreso de Enfermería 2025</h2>
       <p>Un evento para compartir conocimientos, experiencias y formar conexiones significativas entre profesionales y estudiantes del área de la salud.</p>
+      <img src="img/inicio.jpg" alt="Bienvenida al congreso" class="imagen-seccion">
     </section>
 
     <section id="mision">
       <h2>Misión</h2>
       <p>Organizar un congreso de enfermería que promueva principalmente el intercambio de conocimientos, experiencias y habilidades entre profesionales y estudiantes de enfermería, con la finalidad de elevar la calidad del cuidado en el sector salud mediante la capacitación continua y la actualización profesional. Es importante impactar positivamente en la profesión al ofrecer contenido de alta calidad impartido por expertos, creando un espacio colaborativo que potencie el aprendizaje teórico y práctico, a través de conferencias, talleres y actividades interactivas donde las relaciones interpersonales y el trabajo en equipo son pilares para mejorar y transformar la calidad de atención en salud, así mismo, empoderar a los futuros enfermeros y enfermeras, permitiéndoles desarrollar sus habilidades técnicas, éticas y de liderazgo para que puedan contribuir al bienestar global.</p>
+      <img src="img/mision.jpg" alt="Misión del congreso" class="imagen-seccion">
     </section>
 
     <section id="vision">
       <h2>Visión</h2>
       <p>Ser un congreso de referencia para próximas generaciones de estudiantes de Licenciatura en Enfermería. Buscamos capacitar y formar a nuestros compañeros, promoviendo la innovación y la excelencia en el cuidado de la salud, proporcionando un entorno donde se puedan adquirir las competencias necesarias para enfrentar los retos presentes y futuros. Queremos inspirar a la próxima generación de profesionales de la salud a tomar el liderazgo en la transformación de la salud mundial, aplicando el poder de su vocación para cambiar vidas y comunidades, con un enfoque dirigido a mejorar el sistema de salud.</p>
+      <img src="img/vision.jpg" alt="Visión del congreso" class="imagen-seccion">
     </section>
 
     <section id="objetivos">
@@ -45,14 +49,21 @@
       <p>Proporcionar un espacio educativo, integral y seguro para que nuestros compañeros de licenciatura en enfermería puedan aprender de manera holística las responsabilidades, retos, habilidades y métodos que todo profesional de la salud debe poseer y practicar en su vida diaria. Para que sea agente de cambio y de este modo lograr una verdadera transformación en nuestros sistemas de salud.</p>
       <h3>Objetivos Específicos</h3>
       <ul>
-        <li>Brindar formación teórica y práctica sobre las últimas tendencias, investigaciones y avances en el campo de la enfermería.</li>
-        <li>Desarrollar habilidades de liderazgo y toma de decisiones éticas.</li>
-        <li>Fomentar la innovación y la investigación en enfermería.</li>
-        <li>Promover el trabajo en equipo y la colaboración interdisciplinaria.</li>
-        <li>Impulsar el compromiso social y profesional de los estudiantes.</li>
-        <li>Proporcionar un espacio donde profesionales y estudiantes puedan actualizarse.</li>
-        <li>Facilitar el intercambio de experiencias para el aprendizaje colaborativo.</li>
+        <li>Brindar formación teórica y práctica sobre las últimas tendencias, investigaciones y avances en el campo de la enfermería, para que los estudiantes puedan aplicarlos en su futura práctica profesional.</li>
+        <li>Desarrollar habilidades de liderazgo y toma de decisiones éticas, preparando a los estudiantes para asumir roles protagónicos en el cuidado de la salud y la gestión de equipos de trabajo.</li>
+        <li>Fomentar la innovación y la investigación en enfermería, motivando a los estudiantes a explorar nuevas soluciones y enfoques en la atención sanitaria.</li>
+        <li>Promover el trabajo en equipo y la colaboración interdisciplinaria fortaleciendo la capacidad de los futuros profesionales para interactuar eficazmente con otros profesionales de la salud en el cuidado integral de los pacientes.</li>
+        <li>Impulsar el compromiso social y profesional de los estudiantes, con el objetivo de sensibilizarlos sobre la importancia del papel de la enfermería en la transformación de la salud global y en la mejora del bienestar de las comunidades enfocado en la salud pública.</li>
+        <li>Proporcionar un espacio donde los profesionales de enfermería y estudiantes puedan actualizarse con los últimos avances en técnicas, tratamientos y tecnologías en el campo de la atención de enfermería y salud.</li>
+        <li>Facilitar el intercambio de experiencias entre enfermeros y estudiantes, promoviendo así, el aprendizaje colaborativo y el enriquecimiento mutuo. De igual manera, reforzar conocimientos y técnicas sobre procedimientos básicos que amerita nuestra carrera.</li>
       </ul>
+      <img src="img/objetivos.jpg" alt="Objetivos del congreso" class="imagen-seccion">
+    </section>
+
+    <section id="mapa">
+      <h2>Mapa</h2>
+      <p>Ubicación del evento:</p>
+      <img src="img/mapa.jpg" alt="Mapa del lugar del evento" class="imagen-seccion">
     </section>
 
     <section id="cronograma">
@@ -62,11 +73,13 @@
         <li><strong>Día 2:</strong> Conferencias y talleres</li>
         <li><strong>Día 3:</strong> Clausura y actividades finales</li>
       </ul>
+      <img src="img/cronograma.jpg" alt="Cronograma del evento" class="imagen-seccion">
     </section>
 
     <section id="conferencias">
       <h2>Conferencias</h2>
       <p>Pronto publicaremos los nombres de los conferencistas y sus temas.</p>
+      <img src="img/conferencias.jpg" alt="Conferencias del congreso" class="imagen-seccion">
     </section>
 
     <section id="info">
@@ -86,3 +99,4 @@
   </footer>
 </body>
 </html>
+
