--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
 
     <section id="info">
       <h2>Información General</h2>
-      <p>Lugar: Universidad Nacional</p>
-      <p>Fecha: 20 al 22 de septiembre de 2025</p>
+      <p>Lugar: Hotel Gran Evenia Bijao</p>
+      <p>Fecha: 13 al 16 de Mayo del 2025</p>
     </section>
 
     <section id="contacto">
