--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <li><a href="#vision">Visión</a></li>
         <li><a href="#objetivos">Objetivos</a></li>
         <li><a href="#mapa">Mapa</a></li>
-        <li><a href="#cronograma">Cronograma</a></li>
+        <li><a href="#cronograma de actividades">Cronograma</a></li>
         <li><a href="#conferencias">Conferencias</a></li>
         <li><a href="#info">Información</a></li>
         <li><a href="#contacto">Contacto</a></li>
@@ -64,8 +64,8 @@
       <img src="img/mapa.jpg" alt="Mapa del lugar del evento" class="imagen-seccion">
     </section>
 
-    <section id="cronograma">
-      <h2>Cronograma</h2>
+    <section id="cronograma de actividades">
+      <h2>Cronograma de actividades</h2>
       <ul>
         <li><strong>Día 1:</strong> Registro y apertura</li>
         <li><strong>Día 2:</strong> Conferencias y talleres</li>
@@ -73,13 +73,7 @@
       </ul>
       <img src="img/cronograma.jpg" alt="Cronograma del evento" class="imagen-seccion">
     </section>
-
-    <section id="conferencias">
-      <h2>Conferencias</h2>
-      <p>Pronto publicaremos los nombres de los conferencistas y sus temas.</p>
-      <img src="img/conferencias.jpg" alt="Conferencias del congreso" class="imagen-seccion">
-    </section>
-
+    
     <section id="info">
       <h2>Información General</h2>
       <p>Lugar: Hotel Gran Evenia Bijao</p>
