--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     body {
       background: url('img/fondo.jpg') no-repeat center center fixed;
       background-size: cover;
-      position: relative;
       margin: 0;
       font-family: Arial, sans-serif;
     }
@@ -25,10 +24,88 @@
       z-index: -1;
     }
 
+    header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 10px 20px;
+      background-color: rgba(255, 255, 255, 0.95);
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+    }
+
+    header .logo-titulo {
+      display: flex;
+      align-items: center;
+    }
+
+    header .logo-titulo img {
+      height: 60px;
+      margin-right: 15px;
+    }
+
+    nav ul {
+      list-style: none;
+      display: flex;
+      gap: 15px;
+      padding: 0;
+      margin: 0;
+    }
+
+    nav ul li a {
+      text-decoration: none;
+      color: #000;
+      font-weight: bold;
+    }
+
+    .menu-toggle {
+      display: none;
+      flex-direction: column;
+      cursor: pointer;
+    }
+
+    .menu-toggle div {
+      width: 25px;
+      height: 3px;
+      background-color: #000;
+      margin: 4px 0;
+    }
+
+    @media (max-width: 768px) {
+      nav ul {
+        flex-direction: column;
+        background-color: rgba(255, 255, 255, 0.95);
+        position: absolute;
+        top: 80px;
+        right: 20px;
+        width: 200px;
+        display: none;
+        border: 1px solid #ccc;
+        padding: 10px;
+      }
+
+      nav ul.active {
+        display: flex;
+      }
+
+      .menu-toggle {
+        display: flex;
+      }
+    }
+
+    main {
+      padding: 20px;
+    }
+
     .imagen-seccion {
       opacity: 0;
       transform: translateY(20px);
       transition: opacity 1s ease, transform 1s ease;
+      width: 100%;
+      max-width: 800px;
+      display: block;
+      margin: 20px auto;
     }
 
     .imagen-visible {
@@ -39,15 +116,23 @@
 </head>
 <body>
   <header>
-    <h1>Congreso de Enfermería 2025</h1>
+    <div class="logo-titulo">
+      <img src="img/logo.png" alt="Logo del Congreso">
+      <h1>Congreso de Enfermería 2025</h1>
+    </div>
+    <div class="menu-toggle" id="menu-toggle">
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
     <nav>
-      <ul>
+      <ul id="nav-list">
         <li><a href="#inicio">Inicio</a></li>
         <li><a href="#mision">Misión</a></li>
         <li><a href="#vision">Visión</a></li>
         <li><a href="#objetivos">Objetivos</a></li>
         <li><a href="#mapa">Mapa</a></li>
-        <li><a href="#cronograma de actividades">Cronograma de actividades</a></li>
+        <li><a href="#cronograma de actividades">Cronograma</a></li>
         <li><a href="#conferencias">Conferencias</a></li>
         <li><a href="#info">Información</a></li>
         <li><a href="#contacto">Contacto</a></li>
@@ -64,20 +149,20 @@
 
     <section id="mision">
       <h2>Misión</h2>
-      <p>Organizar un congreso de enfermería que promueva principalmente el intercambio de conocimientos, experiencias y habilidades entre profesionales y estudiantes de enfermeria, con la finalidad de elevar la capacitación y actualización mediante docencias con temas innovadores que garanticen la calidad en la atención humana. Es importante impactar positivamente en la profesión al ofrecer contenido de alta calidad impartido por expertos, creando un espacio que potencie el aprendizaje teórico y práctico, a través de conferencias, talleres y actividades interactivas donde las relaciones interpersonales y el trabajo en equipo sean pilares para mejorar y transformar el empoderamiento a los futuros enfermeros y enfermeras, permitiéndoles desarrollar sus habilidades de liderazgo, aprendizaje e investigación para que puedan contribuir al bienestar de cada individuo, comunidad y a cada sistema de salud.</p>
+      <p>Organizar un congreso de enfermería que promueva principalmente el intercambio de conocimientos, experiencias y habilidades entre profesionales y estudiantes de enfermería, con la finalidad de elevar la capacitación y actualización mediante docencias con temas innovadores que garanticen la calidad en la atención humana. Es importante impactar positivamente en la profesión al ofrecer contenido de alta calidad impartido por expertos, creando un espacio que potencie el aprendizaje teórico y práctico, a través de conferencias, talleres y actividades interactivas donde las relaciones interpersonales y el trabajo en equipo sean pilares para mejorar y transformar el empoderamiento a los futuros enfermeros y enfermeras, permitiéndoles desarrollar sus habilidades de liderazgo, aprendizaje e investigación para que puedan contribuir al bienestar de cada individuo, comunidad y a cada sistema de salud.</p>
       <img src="img/mision.jpg" alt="Misión del congreso" class="imagen-seccion">
     </section>
 
     <section id="vision">
       <h2>Visión</h2>
-      <p>Buscamos capacitar y formar al grupo de estudiantes de enfermeria promoviendo la innovación y la excelencia en el cuidado de la salud, proporcionando un entorno donde se puedan adquirir las competencias necesarias para enfrentar los retos presentes y futuros. Queremos inspirar a la próxima generación de profesionales de la salud a tomar el liderazgo en la transformación de la salud mundial, aplicando el poder de su vocación para cambiar vidas y comunidades, con un enfoque dirigido a mejorar el sistema de salud.</p>
+      <p>Buscamos capacitar y formar al grupo de estudiantes de enfermería promoviendo la innovación y la excelencia en el cuidado de la salud, proporcionando un entorno donde se puedan adquirir las competencias necesarias para enfrentar los retos presentes y futuros. Queremos inspirar a la próxima generación de profesionales de la salud a tomar el liderazgo en la transformación de la salud mundial, aplicando el poder de su vocación para cambiar vidas y comunidades, con un enfoque dirigido a mejorar el sistema de salud.</p>
       <img src="img/vision.jpg" alt="Visión del congreso" class="imagen-seccion">
     </section>
 
     <section id="objetivos">
       <h2>Objetivos del Congreso</h2>
       <h3>Objetivo General</h3>
-      <p> Proporcionar un espacio educativo, para fomentar el conocimiento y éxito académico de nuestros compañeros de licenciatura en enfermería, fortaleciendo su participación en el aprendizaje de la atención integral del paciente, para que sea agente de cambio y de este modo lograr una verdadera transformación en nuestros sistemas de salud.</p>
+      <p>Proporcionar un espacio educativo, para fomentar el conocimiento y éxito académico de nuestros compañeros de licenciatura en enfermería, fortaleciendo su participación en el aprendizaje de la atención integral del paciente, para que sea agente de cambio y de este modo lograr una verdadera transformación en nuestros sistemas de salud.</p>
       <h3>Objetivos Específicos</h3>
       <ul>
         <li>Brindar formación teórica y práctica sobre las últimas tendencias, investigaciones y avances en el campo de la enfermería, para que los estudiantes puedan aplicarlos en su futura práctica profesional y en el ámbito laboral.</li>
@@ -104,7 +189,7 @@
       </ul>
       <img src="img/cronograma.jpg" alt="Cronograma del evento" class="imagen-seccion">
     </section>
-    
+
     <section id="info">
       <h2>Información General</h2>
       <p>Lugar: Hotel Gran Evenia Bijao</p>
@@ -122,6 +207,7 @@
   </footer>
 
   <script>
+    // Animación al hacer scroll
     const observer = new IntersectionObserver(entries => {
       entries.forEach(entry => {
         if (entry.isIntersecting) {
@@ -133,7 +219,14 @@
     document.querySelectorAll('.imagen-seccion').forEach(img => {
       observer.observe(img);
     });
+
+    // Menú hamburguesa
+    const menuToggle = document.getElementById('menu-toggle');
+    const navList = document.getElementById('nav-list');
+
+    menuToggle.addEventListener('click', () => {
+      navList.classList.toggle('active');
+    });
   </script>
 </body>
 </html>
-
