--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
     body {
       background: url('img/fondo.jpg') no-repeat center center fixed;
       background-size: cover;
+      position: relative;
       margin: 0;
       font-family: Arial, sans-serif;
     }
-
+  
     body::before {
       content: '';
       position: fixed;
@@ -23,119 +24,81 @@
       background-color: rgba(255, 255, 255, 0.8);
       z-index: -1;
     }
-
+  
     header {
+      background-color: #005b96;
+      color: white;
       display: flex;
-      justify-content: space-between;
       align-items: center;
+      justify-content: space-between;
       padding: 10px 20px;
-      background-color: rgba(255, 255, 255, 0.95);
       position: sticky;
       top: 0;
       z-index: 1000;
+      height: 70px;
     }
-
-    header .logo-titulo {
-      display: flex;
-      align-items: center;
+  
+    header img {
+      height: 50px;
+      margin-right: 20px;
     }
-
-    header .logo-titulo img {
-      height: 60px;
-      margin-right: 15px;
+  
+    header h1 {
+      position: absolute;
+      left: 50%;
+      transform: translateX(-50%);
+      margin: 0;
+      font-size: 1.8em;
+      white-space: nowrap;
     }
-
+  
     nav ul {
       list-style: none;
       display: flex;
-      gap: 15px;
-      padding: 0;
       margin: 0;
+      padding: 0;
     }
-
+  
+    nav ul li {
+      margin: 0 10px;
+    }
+  
     nav ul li a {
+      color: white;
       text-decoration: none;
-      color: #000;
       font-weight: bold;
     }
-
-    .menu-toggle {
-      display: none;
-      flex-direction: column;
-      cursor: pointer;
-    }
-
-    .menu-toggle div {
-      width: 25px;
-      height: 3px;
-      background-color: #000;
-      margin: 4px 0;
-    }
-
-    @media (max-width: 768px) {
-      nav ul {
-        flex-direction: column;
-        background-color: rgba(255, 255, 255, 0.95);
-        position: absolute;
-        top: 80px;
-        right: 20px;
-        width: 200px;
-        display: none;
-        border: 1px solid #ccc;
-        padding: 10px;
-      }
-
-      nav ul.active {
-        display: flex;
-      }
-
-      .menu-toggle {
-        display: flex;
-      }
-    }
-
-    main {
-      padding: 20px;
-    }
-
+  
     .imagen-seccion {
       opacity: 0;
       transform: translateY(20px);
       transition: opacity 1s ease, transform 1s ease;
-      width: 100%;
-      max-width: 800px;
-      display: block;
-      margin: 20px auto;
     }
-
+  
     .imagen-visible {
       opacity: 1;
       transform: translateY(0);
     }
+  
+    main {
+      padding-top: 20px;
+    }
   </style>
+  
 </head>
 <body>
   <header>
-    <div class="logo-titulo">
-      <img src="img/logo.png" alt="Logo del Congreso">
-      <h1>Congreso de Enfermería 2025</h1>
-    </div>
-    <div class="menu-toggle" id="menu-toggle">
-      <div></div>
-      <div></div>
-      <div></div>
-    </div>
+    <img src="img/logo.png" alt="Logo del Congreso">
+    <h1>Congreso de Enfermería 2025</h1>
     <nav>
-      <ul id="nav-list">
+      <ul>
         <li><a href="#inicio">Inicio</a></li>
         <li><a href="#mision">Misión</a></li>
         <li><a href="#vision">Visión</a></li>
         <li><a href="#objetivos">Objetivos</a></li>
         <li><a href="#mapa">Mapa</a></li>
-        <li><a href="#cronograma de actividades">Cronograma</a></li>
-        <li><a href="#conferencias">Conferencias</a></li>
+        <li><a href="#cronograma">Cronograma</a></li>
         <li><a href="#info">Información</a></li>
-        <li><a href="#contacto">Contacto</a></li>
       </ul>
     </nav>
   </header>
@@ -166,7 +129,7 @@
       <h3>Objetivos Específicos</h3>
       <ul>
         <li>Brindar formación teórica y práctica sobre las últimas tendencias, investigaciones y avances en el campo de la enfermería, para que los estudiantes puedan aplicarlos en su futura práctica profesional y en el ámbito laboral.</li>
-        <li>Establecer la importancia de influir de manera positiva en cuidado integral del paciente y contribuir de manera eficaz eficiente y oportuna en las mejoras de nuestro sistema sanitario a través de la investigación y educación continua de nuestros estudiantes.</li>
+        <li>Establecer la importancia de influir de manera positiva en el cuidado integral del paciente y contribuir de manera eficaz, eficiente y oportuna en las mejoras de nuestro sistema sanitario a través de la investigación y educación continua de nuestros estudiantes.</li>
         <li>Desarrollar habilidades de liderazgo y toma de decisiones éticas, preparando a los estudiantes para asumir roles protagónicos en el cuidado de la salud y la gestión de equipos de trabajo.</li>
         <li>Promover el trabajo en equipo y la colaboración interdisciplinaria fortaleciendo la capacidad de los futuros profesionales para interactuar eficazmente con otros profesionales de la salud en el cuidado integral de los pacientes.</li>
         <li>Impulsar el compromiso social y profesional de los estudiantes, con la finalidad de sensibilizarlos sobre la importancia del papel de la enfermería en la transformación de la salud global.</li>
@@ -180,8 +143,8 @@
       <img src="img/mapa.jpg" alt="Mapa del lugar del evento" class="imagen-seccion">
     </section>
 
-    <section id="cronograma de actividades">
-      <h2>Cronograma de actividades</h2>
+    <section id="cronograma">
+      <h2>Cronograma de Actividades</h2>
       <ul>
         <li><strong>Día 1:</strong> Registro y apertura</li>
         <li><strong>Día 2:</strong> Conferencias y talleres</li>
@@ -189,16 +152,11 @@
       </ul>
       <img src="img/cronograma.jpg" alt="Cronograma del evento" class="imagen-seccion">
     </section>
-
+    
     <section id="info">
       <h2>Información General</h2>
       <p>Lugar: Hotel Gran Evenia Bijao</p>
       <p>Fecha: 13 al 16 de Mayo del 2025</p>
-    </section>
-
-    <section id="contacto">
-      <h2>Contacto</h2>
-      <p>Email: congreso2025@email.com</p>
     </section>
   </main>
 
@@ -207,7 +165,6 @@
   </footer>
 
   <script>
-    // Animación al hacer scroll
     const observer = new IntersectionObserver(entries => {
       entries.forEach(entry => {
         if (entry.isIntersecting) {
@@ -218,14 +175,6 @@
 
     document.querySelectorAll('.imagen-seccion').forEach(img => {
       observer.observe(img);
-    });
-
-    // Menú hamburguesa
-    const menuToggle = document.getElementById('menu-toggle');
-    const navList = document.getElementById('nav-list');
-
-    menuToggle.addEventListener('click', () => {
-      navList.classList.toggle('active');
     });
   </script>
 </body>
