--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css">
   <style>
     body {
-      background: url('img/fondo.jpg') no-repeat center center fixed;
+      background: url('imagen f.jpeg') no-repeat center center fixed;
       background-size: cover;
       position: relative;
       margin: 0;
@@ -88,17 +88,14 @@
 </head>
 <body>
   <header>
-    <img src="img/logo.png" alt="Logo del Congreso">
+    <img src="logo.jpg" alt="Logo del Congreso">
     <h1>Congreso de Enfermería 2025</h1>
     <nav>
       <ul>
         <li><a href="#inicio">Inicio</a></li>
-        <li><a href="#mision">Misión</a></li>
-        <li><a href="#vision">Visión</a></li>
         <li><a href="#objetivos">Objetivos</a></li>
         <li><a href="#mapa">Mapa</a></li>
         <li><a href="#cronograma">Cronograma</a></li>
-        <li><a href="#info">Información</a></li>
       </ul>
     </nav>
   </header>
@@ -107,19 +104,19 @@
     <section id="inicio">
       <h2>Bienvenidos al Congreso de Enfermería 2025</h2>
       <p>Un evento para compartir conocimientos, experiencias y formar conexiones significativas entre profesionales y estudiantes del área de la salud.</p>
-      <img src="img/inicio.jpg" alt="Bienvenida al congreso" class="imagen-seccion">
+      <img src="img 1.jpg" alt="Bienvenida al congreso" class="imagen-seccion">
     </section>
 
     <section id="mision">
       <h2>Misión</h2>
       <p>Organizar un congreso de enfermería que promueva principalmente el intercambio de conocimientos, experiencias y habilidades entre profesionales y estudiantes de enfermería, con la finalidad de elevar la capacitación y actualización mediante docencias con temas innovadores que garanticen la calidad en la atención humana. Es importante impactar positivamente en la profesión al ofrecer contenido de alta calidad impartido por expertos, creando un espacio que potencie el aprendizaje teórico y práctico, a través de conferencias, talleres y actividades interactivas donde las relaciones interpersonales y el trabajo en equipo sean pilares para mejorar y transformar el empoderamiento a los futuros enfermeros y enfermeras, permitiéndoles desarrollar sus habilidades de liderazgo, aprendizaje e investigación para que puedan contribuir al bienestar de cada individuo, comunidad y a cada sistema de salud.</p>
-      <img src="img/mision.jpg" alt="Misión del congreso" class="imagen-seccion">
+      <img src="img 2.jpg" alt="Misión del congreso" class="imagen-seccion">
     </section>
 
     <section id="vision">
       <h2>Visión</h2>
       <p>Buscamos capacitar y formar al grupo de estudiantes de enfermería promoviendo la innovación y la excelencia en el cuidado de la salud, proporcionando un entorno donde se puedan adquirir las competencias necesarias para enfrentar los retos presentes y futuros. Queremos inspirar a la próxima generación de profesionales de la salud a tomar el liderazgo en la transformación de la salud mundial, aplicando el poder de su vocación para cambiar vidas y comunidades, con un enfoque dirigido a mejorar el sistema de salud.</p>
-      <img src="img/vision.jpg" alt="Visión del congreso" class="imagen-seccion">
+      <img src="img 3.jpg" alt="Visión del congreso" class="imagen-seccion">
     </section>
 
     <section id="objetivos">
@@ -140,7 +137,7 @@
     <section id="mapa">
       <h2>Mapa</h2>
       <p>Ubicación del evento:</p>
-      <img src="img/mapa.jpg" alt="Mapa del lugar del evento" class="imagen-seccion">
+      <img src="mapa.jpeg" alt="Mapa del lugar del evento" class="imagen-seccion">
     </section>
 
     <section id="cronograma">
