--- a/index.html
+++ b/index.html
@@ -79,10 +79,6 @@
     }
 
     @media (max-width: 768px) {
-      .menu-toggle {
-        display: flex;
-      }
-
       ul {
         display: none;
         flex-direction: column;
@@ -96,6 +92,10 @@
       }
 
       ul.show {
+        display: flex;
+      }
+
+      .menu-toggle {
         display: flex;
       }
     }
@@ -114,6 +114,14 @@
     .imagen-visible {
       opacity: 1;
       transform: translateY(0);
+    }
+
+    footer {
+      text-align: center;
+      padding: 15px;
+      background-color: #003366;
+      color: white;
+      margin-top: 20px;
     }
   </style>
 </head>
@@ -145,27 +153,27 @@
 
     <section id="mision">
       <h2>Misión</h2>
-      <p>Organizar un congreso de enfermería que promueva principalmente el intercambio de conocimientos, experiencias y habilidades entre profesionales y estudiantes de enfermería, con la finalidad de elevar la capacitación y actualización mediante docencias con temas innovadores que garanticen la calidad en la atención humana. Es importante impactar positivamente en la profesión al ofrecer contenido de alta calidad impartido por expertos, creando un espacio que potencie el aprendizaje teórico y práctico, a través de conferencias, talleres y actividades interactivas donde las relaciones interpersonales y el trabajo en equipo sean pilares para mejorar y transformar el empoderamiento a los futuros enfermeros y enfermeras, permitiéndoles desarrollar sus habilidades de liderazgo, aprendizaje e investigación para que puedan contribuir al bienestar de cada individuo, comunidad y a cada sistema de salud.</p>
+      <p>Organizar un congreso de enfermería que promueva principalmente el intercambio de conocimientos...</p>
       <img src="img 2.jpg" alt="Misión del congreso" class="imagen-seccion">
     </section>
 
     <section id="vision">
       <h2>Visión</h2>
-      <p>Buscamos capacitar y formar al grupo de estudiantes de enfermería promoviendo la innovación y la excelencia en el cuidado de la salud, proporcionando un entorno donde se puedan adquirir las competencias necesarias para enfrentar los retos presentes y futuros. Queremos inspirar a la próxima generación de profesionales de la salud a tomar el liderazgo en la transformación de la salud mundial, aplicando el poder de su vocación para cambiar vidas y comunidades, con un enfoque dirigido a mejorar el sistema de salud.</p>
+      <p>Buscamos capacitar y formar al grupo de estudiantes de enfermería promoviendo la innovación...</p>
       <img src="img 3.jpg" alt="Visión del congreso" class="imagen-seccion">
     </section>
 
     <section id="objetivos">
       <h2>Objetivos del Congreso</h2>
       <h3>Objetivo General</h3>
-      <p>Proporcionar un espacio educativo, para fomentar el conocimiento y éxito académico de nuestros compañeros de licenciatura en enfermería, fortaleciendo su participación en el aprendizaje de la atención integral del paciente, para que sea agente de cambio y de este modo lograr una verdadera transformación en nuestros sistemas de salud.</p>
+      <p>Proporcionar un espacio educativo...</p>
       <h3>Objetivos Específicos</h3>
       <ul>
-        <li>Brindar formación teórica y práctica sobre las últimas tendencias, investigaciones y avances en el campo de la enfermería, para que los estudiantes puedan aplicarlos en su futura práctica profesional y en el ámbito laboral.</li>
-        <li>Establecer la importancia de influir de manera positiva en cuidado integral del paciente y contribuir de manera eficaz, eficiente y oportuna en las mejoras de nuestro sistema sanitario a través de la investigación y educación continua de nuestros estudiantes.</li>
-        <li>Desarrollar habilidades de liderazgo y toma de decisiones éticas, preparando a los estudiantes para asumir roles protagónicos en el cuidado de la salud y la gestión de equipos de trabajo.</li>
-        <li>Promover el trabajo en equipo y la colaboración interdisciplinaria fortaleciendo la capacidad de los futuros profesionales para interactuar eficazmente con otros profesionales de la salud en el cuidado integral de los pacientes.</li>
-        <li>Impulsar el compromiso social y profesional de los estudiantes, con la finalidad de sensibilizarlos sobre la importancia del papel de la enfermería en la transformación de la salud global.</li>
+        <li>Brindar formación teórica y práctica sobre las últimas tendencias...</li>
+        <li>Establecer la importancia de influir de manera positiva...</li>
+        <li>Desarrollar habilidades de liderazgo y toma de decisiones éticas...</li>
+        <li>Promover el trabajo en equipo y la colaboración interdisciplinaria...</li>
+        <li>Impulsar el compromiso social y profesional de los estudiantes...</li>
       </ul>
       <img src="img/objetivos.jpg" alt="Objetivos del congreso" class="imagen-seccion">
     </section>
@@ -198,27 +206,24 @@
   </footer>
 
   <script>
-  function toggleMenu() {
-    const menu = document.getElementById('menu');
-    menu.classList.toggle('show');
-  }
-
-  // Ocultar menú cuando se hace clic en un enlace (solo en pantallas pequeñas)
-  document.querySelectorAll('#menu a').forEach(link => {
-    link.addEventListener('click', () => {
+    function toggleMenu() {
       const menu = document.getElementById('menu');
-      if (window.innerWidth <= 768) {
-        menu.classList.remove('show');
+      menu.classList.toggle('show');
+    }
+
+    document.querySelectorAll('#menu a').forEach(link => {
+      link.addEventListener('click', () => {
+        if (window.innerWidth <= 768) {
+          document.getElementById('menu').classList.remove('show');
+        }
+      });
+    });
+
+    window.addEventListener('resize', () => {
+      if (window.innerWidth > 768) {
+        document.getElementById('menu').classList.remove('show');
       }
     });
-  });
-
-  // Cierra el menú si se cambia el tamaño de pantalla a grande
-  window.addEventListener('resize', () => {
-    if (window.innerWidth > 768) {
-      document.getElementById('menu').classList.remove('show');
-    }
-  });
-</script>
+  </script>
 </body>
 </html>
