--- a/index.html
+++ b/index.html
@@ -63,42 +63,33 @@
       margin: 4px 0;
     }
 
-    ul {
-      list-style: none;
-      padding: 0;
-      margin: 0;
-      display: flex;
-      gap: 15px;
-      flex-wrap: wrap;
-    }
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  gap: 15px;
+  flex-wrap: wrap;
+}
 
-    ul li a {
-      color: white;
-      text-decoration: none;
-      font-weight: bold;
-    }
+/* AÑADE esta parte para pantallas pequeñas */
+@media (max-width: 768px) {
+  ul {
+    display: none !important; /* Fuerza ocultar */
+    flex-direction: column;
+    background-color: #003366;
+    position: absolute;
+    right: 0;
+    top: 60px;
+    width: 200px;
+    z-index: 10;
+    padding: 10px;
+  }
 
-    @media (max-width: 768px) {
-      .menu-toggle {
-        display: flex;
-      }
-
-      ul {
-        display: none;
-        flex-direction: column;
-        background-color: #003366;
-        position: absolute;
-        right: 0;
-        top: 60px;
-        width: 200px;
-        z-index: 10;
-        padding: 10px;
-      }
-
-      ul.show {
-        display: flex;
-      }
-    }
+  ul.show {
+    display: flex !important; /* Solo se muestra si tiene la clase .show */
+  }
+}
 
     .imagen-seccion {
       max-width: 100%;
