--- a/index.html
+++ b/index.html
@@ -168,14 +168,14 @@
     <section id="objetivos">
       <h2>Objetivos del Congreso</h2>
       <h3>Objetivo General</h3>
-      <p>Proporcionar un espacio educativo, para fomentar el conocimiento y éxito académico de nuestros compañeros de licenciatura en enfermería, fortaleciendo su participación en el aprendizaje de la atención integral del paciente, para que sea agente de cambio y de este modo lograr una verdadera transformación en nuestros sistemas de salud.</p>
+      <p>* Proporcionar un espacio educativo, para fomentar el conocimiento y éxito académico de nuestros compañeros de licenciatura en enfermería, fortaleciendo su participación en el aprendizaje de la atención integral del paciente, para que sea agente de cambio y de este modo lograr una verdadera transformación en nuestros sistemas de salud.</p>
       <h3>Objetivos Específicos</h3>
       <ul>
-        <li>Brindar formación teórica y práctica sobre las últimas tendencias, investigaciones y avances en el campo de la enfermería, para que los estudiantes puedan aplicarlos en su futura práctica profesional y en el ámbito laboral.</li>
-        <li>Establecer la importancia de influir de manera positiva en cuidado integral del paciente y contribuir de manera eficaz, eficiente y oportuna en las mejoras de nuestro sistema sanitario a través de la investigación y educación continua de nuestros estudiantes.</li>
-        <li>Desarrollar habilidades de liderazgo y toma de decisiones éticas, preparando a los estudiantes para asumir roles protagónicos en el cuidado de la salud y la gestión de equipos de trabajo.</li>
-        <li>Promover el trabajo en equipo y la colaboración interdisciplinaria fortaleciendo la capacidad de los futuros profesionales para interactuar eficazmente con otros profesionales de la salud en el cuidado integral de los pacientes.</li>
-        <li>Impulsar el compromiso social y profesional de los estudiantes, con la finalidad de sensibilizarlos sobre la importancia del papel de la enfermería en la transformación de la salud global.</li>
+        <li>* Brindar formación teórica y práctica sobre las últimas tendencias, investigaciones y avances en el campo de la enfermería, para que los estudiantes puedan aplicarlos en su futura práctica profesional y en el ámbito laboral.</li>
+        <li>* Establecer la importancia de influir de manera positiva en cuidado integral del paciente y contribuir de manera eficaz eficiente y oportuna en las mejoras de nuestro sistema sanitario a través de la investigación y educación continua de nuestros estudiantes.</li>
+        <li>* Desarrollar habilidades de liderazgo y toma de decisiones éticas, preparando a los estudiantes para asumir roles protagónicos en el cuidado de la salud y la gestión de equipos de trabajo.</li>
+        <li>* Promover el trabajo en equipo y la colaboración interdisciplinaria fortaleciendo la capacidad de los futuros profesionales para interactuar eficazmente con otros profesionales de la salud en el cuidado integral de los pacientes.</li>
+        <li>* Impulsar el compromiso social y profesional de los estudiantes, con la finalidad de sensibilizarlos sobre la importancia del papel de la enfermería en la transformación de la salud global.</li>
       </ul>
     </section>
 
