--- a/index.html
+++ b/index.html
@@ -183,6 +183,7 @@
       <h2>Mapa</h2>
       <p>Ubicación del evento:</p>
       <img src="mapa.jpg" alt="Mapa del lugar del evento" class="imagen-seccion">
+      <img src="reglas.jpg" alt="Reglas de la piscina" class="imagen-seccion">
     </section>
 
     <section id="cronograma de actividades">
