--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 
   <footer>
   <p>&copy; 2025 Congreso Nacional de Enfermería. Todos los derechos reservados.</p>
-  <p>Desarrollado por <a href="https://www.instagram.com/oscarsaid20/" target="_blank">@Oscarsaid20</a></p>
+  // <p>Desarrollado por <a href="https://www.instagram.com/oscarsaid20/" target="_blank">@Oscarsaid20</a></p>
 </footer>
 
   <script>
