--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
         <li><a href="#objetivos">Objetivos</a></li>
         <li><a href="#mapa">Mapa</a></li>
         <li><a href="#cronograma de actividades">Cronograma</a></li>
+        <li><a href="#encuesta">Encuesta de Satisfacción</a></li>
       </ul>
     </nav>
   </header>
@@ -196,12 +197,19 @@
       <img src="dia3.jpg" alt="Actividad especial 2" class="imagen-seccion">
       <img src="dia4.jpg" alt="Actividad especial 3" class="imagen-seccion">
     </section>
-
+    
+    <section id="encuesta">
+      <h2>Encuesta de Satisfacción</h2>
+      <p>Queremos conocer tu opinión sobre el evento. Por favor, accede a la encuesta a través del siguiente enlace:</p>
+      <a href="https://forms.gle/VuBkJku9QnSXh8qv8" target="_blank">Completar Encuesta</a>
+    </section>
+    
     <section id="info">
       <h2>Información General</h2>
       <p>Lugar: Hotel Gran Evenia Bijao</p>
       <p>Fecha: 13 al 16 de Mayo del 2025</p>
     </section>
+
   </main>
 
   <footer>
